--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -1,5 +1,6 @@
 ---
-import '@fontsource-variable/inter';
+import '@fontsource-variable/urbanist';
+import '@fontsource/marcellus';
 
 // 'DM Sans'
 // Nunito
@@ -21,9 +22,9 @@ import '@fontsource-variable/inter';
 
 <style is:inline>
   :root {
-    --aw-font-sans: 'Inter Variable';
-    --aw-font-serif: 'Inter Variable';
-    --aw-font-heading: 'Inter Variable';
+    --aw-font-sans: 'Urbanist Variable';
+    --aw-font-serif: 'Urbanist Variable';
+    --aw-font-heading: 'Urbanist Variable';
 
     --aw-color-primary: #6f7257;
     --aw-color-secondary: rgb(1 84 207);
@@ -42,9 +43,9 @@ import '@fontsource-variable/inter';
   }
 
   .dark {
-    --aw-font-sans: 'Inter Variable';
-    --aw-font-serif: 'Inter Variable';
-    --aw-font-heading: 'Inter Variable';
+    --aw-font-sans: 'Urbanist Variable';
+    --aw-font-serif: 'Urbanist Variable';
+    --aw-font-heading: 'Urbanist Variable';
 
     --aw-color-primary: rgb(1 97 239);
     --aw-color-secondary: rgb(1 84 207);
