--- a/src/pages/homes/personal.astro
+++ b/src/pages/homes/personal.astro
@@ -1,20 +1,17 @@
 ---
 import Layout from '~/layouts/PageLayout.astro';
-
 import Header from '~/components/widgets/Header.astro';
-import Hero from '~/components/widgets/Hero.astro';
 import Content from '~/components/widgets/Content.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
 import Features3 from '~/components/widgets/Features3.astro';
 import Testimonials from '~/components/widgets/Testimonials.astro';
 import Steps from '~/components/widgets/Steps.astro';
 import BlogLatestPosts from '~/components/widgets/BlogLatestPosts.astro';
-import { getPermalink } from '~/utils/permalinks';
 import IsaHero from '~/components/widgets/IsaHero.astro';
 import Sobre from '~/components/widgets/Sobre.astro';
 
 const metadata = {
-  title: 'Personal Homepage Demo',
+  title: 'Dra. Isadora Rosa',
 };
 ---
 
