--- a/src/components/widgets/IsaHero.astro
+++ b/src/components/widgets/IsaHero.astro
@@ -11,7 +11,7 @@ import DoctorPhoto from '../../assets/images/isadora-main-nobg-upscayl.png';
 const { id } = Astro.props;
 ---
 
-<section {...id ? { id } : {}} class="relative w-full bg-isaGreen py-16 md:py-24">
+<section {...id ? { id } : {}} class="scroll-mt-20 relative w-full bg-isaGreen py-16 md:py-24">
   <!-- Decorative Flowers -->
   <div class="absolute inset-0 overflow-hidden pointer-events-none">
     <FlowerRight class="absolute -top-5 -right-36 w-[550px] md:-top-5 md:right-0 md:w-[clamp(500px,40vw,1000px)]" />
