--- a/src/components/widgets/Sobre.astro
+++ b/src/components/widgets/Sobre.astro
@@ -1,8 +1,9 @@
 ---
 import DoctorPhoto from '../../assets/images/isadora-about.png';
+const { id } = Astro.props;
 ---
 
-<section id="about" class="w-full py-20 bg-offWhite text-isaGreen">
+<section {...id ? { id } : {}} class="scroll-mt-16 w-full py-20 bg-offWhite text-isaGreen">
   <div class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-20 items-center">
     <!-- IMAGE + DECORATIVE CIRCLE -->
     <div class="relative order-2 md:order-none flex justify-center w-full md:w-auto">
@@ -25,7 +26,7 @@ import DoctorPhoto from '../../assets/images/isadora-about.png';
 
     <!-- TEXT -->
     <div class="order-1 md:order-none text-isaPink">
-      <h2 class="text-3xl md:text-3xl font-sans font-normal mb-6">Sobre Mim</h2>
+      <h2 class="text-3xl font-sans font-normal mb-6">Sobre Mim</h2>
 
       <p class="font-urbanist text-lg leading-relaxed mb-4">
         Sou a Dra. Isadora Rosa, especialista em saúde feminina e apaixonada por oferecer um cuidado acolhedor, humano e
