--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -1,9 +1,9 @@
 ---
 import { Icon } from 'astro-icon/components';
-import Logo from '~/components/Logo.astro';
+import IsadoraLogo from '../../assets/vectors/isadora-logo.svg';
 import ToggleTheme from '~/components/common/ToggleTheme.astro';
 import ToggleMenu from '~/components/common/ToggleMenu.astro';
-import Button from '~/components/ui/Button.astro';
+// import Button from '~/components/ui/Button.astro';
 import { trimSlash, getAsset } from '~/utils/permalinks';
 import type { CallToAction } from '~/types';
 
@@ -33,7 +33,7 @@ export interface Props {
 const {
   id = 'header',
   links = [],
-  actions = [],
+  // actions = [],
   isSticky = false,
   isDark = false,
   isFullWidth = false,
@@ -70,7 +70,9 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
   >
     <div class:list={[{ 'mr-auto rtl:mr-0 rtl:ml-auto': position === 'right' }, 'flex justify-between']}>
       <a class="flex items-center" href="#inicio">
-        <Logo />
+        <span class="self-center">
+          <IsadoraLogo class="w-12 h-12 text-isaGreen" />
+        </span>
       </a>
       <div class="flex items-center md:hidden">
         <ToggleMenu />
@@ -148,7 +150,7 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
             )
           }
         </div>
-        {
+        <!-- {
           actions?.length ? (
             <span class="ml-4 rtl:ml-0 rtl:mr-4">
               {actions.map((btnProps) => (
@@ -161,7 +163,7 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
           ) : (
             ''
           )
-        }
+        } -->
       </div>
     </div>
   </div>
