--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -14,7 +14,7 @@ const { metadata } = Astro.props;
 
 <Layout metadata={metadata}>
   <slot name="header">
-    <Header isSticky showRssFeed showToggleTheme />
+    <Header isSticky showRssFeed />
   </slot>
   <main>
     <slot />
