--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -1,9 +1,7 @@
 ---
 import { Icon } from 'astro-icon/components';
 import IsadoraLogo from '../../assets/vectors/isadora-logo.svg';
-import ToggleTheme from '~/components/common/ToggleTheme.astro';
 import ToggleMenu from '~/components/common/ToggleMenu.astro';
-// import Button from '~/components/ui/Button.astro';
 import { trimSlash, getAsset } from '~/utils/permalinks';
 import type { CallToAction } from '~/types';
 
@@ -25,7 +23,7 @@ export interface Props {
   isSticky?: boolean;
   isDark?: boolean;
   isFullWidth?: boolean;
-  showToggleTheme?: boolean;
+  // showToggleTheme?: boolean;
   showRssFeed?: boolean;
   position?: string;
 }
@@ -37,7 +35,7 @@ const {
   isSticky = false,
   isDark = false,
   isFullWidth = false,
-  showToggleTheme = false,
+  // showToggleTheme = false,
   showRssFeed = false,
   position = 'center',
 } = Astro.props;
@@ -137,7 +135,7 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
     >
       <div class="items-center flex justify-between w-full md:w-auto">
         <div class="flex">
-          {showToggleTheme && <ToggleTheme iconClass="w-6 h-6 md:w-5 md:h-5 md:inline-block" />}
+          <!-- {showToggleTheme && <ToggleTheme iconClass="w-6 h-6 md:w-5 md:h-5 md:inline-block" />} -->
           {
             showRssFeed && (
               <a
