--- a/src/components/widgets/CTA.astro
+++ b/src/components/widgets/CTA.astro
@@ -1,5 +1,6 @@
 ---
 const { id } = Astro.props;
+import { WHATSAPP_LINK } from '../../content/constants/links';
 ---
 
 <section {...id ? { id } : {}} class="w-full bg-isaGreen text-offWhite text-center">
@@ -13,7 +14,7 @@ const { id } = Astro.props;
       </p>
 
       <a
-        href="https://wa.me/5562985083888"
+        href={WHATSAPP_LINK}
         target="_blank"
         rel="noopener noreferrer"
         class="inline-block btn py-3 px-6 font-semibold shadow-none text-base w-auto bg-offWhite text-isaPink hover:bg-offWhite/80"
