--- a/src/components/widgets/Sobre.astro
+++ b/src/components/widgets/Sobre.astro
@@ -19,7 +19,7 @@ const { id } = Astro.props;
         <img
           src={DoctorPhoto.src}
           alt="Foto da Doutora"
-          class="relative z-10 w-[350px] md:w-[400px] lg:w-[500px] block"
+          class="relative z-10 w-[350px] md:w-[400px] lg:w-[500px] block pointer-events-none"
         />
       </div>
     </div>
