--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -31,7 +31,7 @@ export interface Props {
 const {
   id = 'header',
   links = [],
-  // actions = [],
+  actions = [],
   isSticky = false,
   isDark = false,
   isFullWidth = false,
@@ -133,35 +133,23 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
         'hidden md:self-center md:flex items-center md:mb-0 fixed w-full md:w-auto md:static justify-end left-0 rtl:left-auto rtl:right-0 bottom-0 p-3 md:p-0 md:justify-self-end',
       ]}
     >
-      <div class="items-center flex justify-between w-full md:w-auto">
-        <div class="flex">
-          <!-- {showToggleTheme && <ToggleTheme iconClass="w-6 h-6 md:w-5 md:h-5 md:inline-block" />} -->
-          {
-            showRssFeed && (
-              <a
-                class="text-muted dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 inline-flex items-center"
-                aria-label="RSS Feed"
-                href={getAsset('/rss.xml')}
-              >
-                <Icon name="tabler:rss" class="w-5 h-5" />
-              </a>
-            )
-          }
-        </div>
-        <!-- {
+      <div class="items-center flex justify-center md:justify-between w-full md:w-auto">
+        {
           actions?.length ? (
-            <span class="ml-4 rtl:ml-0 rtl:mr-4">
+            <span class="ml-4">
               {actions.map((btnProps) => (
-                <Button
+                <a
                   {...btnProps}
-                  class="ml-2 py-2.5 px-5.5 md:px-6 font-semibold shadow-none text-sm w-auto bg-offWhite text-isaGreen hover:bg-offWhite/80"
-                />
+                  class="btn py-2.5 px-5.5 md:px-6 font-semibold shadow-none text-sm w-auto bg-offWhite text-isaGreen hover:bg-offWhite/80"
+                >
+                  {btnProps.text}
+                </a>
               ))}
             </span>
           ) : (
             ''
           )
-        } -->
+        }
       </div>
     </div>
   </div>
