--- a/src/components/widgets/CTA.astro
+++ b/src/components/widgets/CTA.astro
@@ -17,7 +17,7 @@ import { WHATSAPP_LINK } from '../../content/constants/links';
         href={WHATSAPP_LINK}
         target="_blank"
         rel="noopener noreferrer"
-        class="inline-block btn py-3 px-6 font-semibold shadow-none text-base w-auto bg-offWhite text-isaPink hover:bg-offWhite/80"
+        class="inline-block btn-secondary py-3 px-6 font-semibold shadow-none text-base w-auto bg-offWhite text-isaPink hover:bg-offWhite/80"
       >
         Agendar Consulta
       </a>
