--- a/src/components/widgets/Contato.astro
+++ b/src/components/widgets/Contato.astro
@@ -68,7 +68,7 @@ const place = 'Genesis+Centro+de+Assistencia+em+Reproducao+Humana+Brasilia+DF';
         href={WHATSAPP_LINK}
         target="_blank"
         rel="noopener noreferrer"
-        class="inline-block mt-10 btn py-3 px-6 font-semibold shadow-none text-base w-auto bg-offWhite text-isaGreen hover:bg-offWhite/80"
+        class="inline-block mt-10 btn-secondary py-3 px-6 font-semibold shadow-none text-base w-auto bg-offWhite text-isaGreen hover:bg-offWhite/80"
       >
         Agendar consulta
       </a>
