--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -140,7 +140,7 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
               {actions.map((btnProps) => (
                 <a
                   {...btnProps}
-                  class="btn py-2.5 px-5.5 md:px-6 font-semibold shadow-none text-sm w-auto bg-offWhite text-isaGreen hover:bg-offWhite/80"
+                  class="btn-secondary py-2.5 px-5.5 md:px-6 font-semibold shadow-none text-sm w-auto bg-offWhite text-isaGreen hover:bg-offWhite/80"
                 >
                   {btnProps.text}
                 </a>
