--- a/src/components/widgets/IsaHero.astro
+++ b/src/components/widgets/IsaHero.astro
@@ -44,7 +44,7 @@ const { id } = Astro.props;
         href={WHATSAPP_LINK}
         target="_blank"
         rel="noopener noreferrer"
-        class="btn py-3 px-6 font-semibold shadow-none text-base w-auto bg-offWhite text-isaGreen hover:bg-offWhite/80"
+        class="btn-secondary py-3 px-6 font-semibold shadow-none text-base w-auto bg-offWhite text-isaGreen hover:bg-offWhite/80"
       >
         Agende sua consulta
       </a>
