--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,7 +2,7 @@
 import Layout from '~/layouts/Layout.astro';
 import { getHomePermalink } from '~/utils/permalinks';
 
-const title = `Error 404`;
+const title = `Página não encontrada`;
 ---
 
 <Layout metadata={{ title }}>
@@ -10,14 +10,20 @@ const title = `Error 404`;
     <div class="container flex flex-col items-center justify-center px-5 mx-auto my-8">
       <div class="max-w-md text-center">
         <h2 class="mb-8 font-bold text-9xl">
-          <span class="sr-only">Error</span>
+          <span class="sr-only">Erro</span>
           <span class="text-primary">404</span>
         </h2>
-        <p class="text-3xl font-semibold md:text-3xl">Sorry, we couldn't find this page.</p>
+        <p class="text-3xl font-semibold md:text-3xl">Ops! Não encontramos a página que você procura.</p>
         <p class="mt-4 mb-8 text-lg text-muted dark:text-slate-400">
-          But dont worry, you can find plenty of other things on our homepage.
+          Mas não se preocupe, você pode voltar à página inicial e explorar nossos serviços e conteúdos.
         </p>
-        <a rel="noopener noreferrer" href={getHomePermalink()} class="btn ml-4">Back to homepage</a>
+        <a
+          rel="noopener noreferrer"
+          href={getHomePermalink()}
+          class="btn-secondary py-3 px-6 font-semibold shadow-none text-base w-auto bg-isaGreen text-offWhite hover:bg-isaGreen/80"
+        >
+          Voltar para a página inicial
+        </a>
       </div>
     </div>
   </section>
