--- a/src/components/widgets/Especialidades.astro
+++ b/src/components/widgets/Especialidades.astro
@@ -3,7 +3,7 @@ import { Dna, Snowflake, TestTubeDiagonal, Stethoscope, Pill, HeartPulse } from 
 const { id } = Astro.props;
 ---
 
-<section {...id ? { id } : {}} class="scroll-mt-16 w-full py-24 bg-offWhite text-isaGreen">
+<section {...id ? { id } : {}} class="scroll-mt-16 w-full pt-24 pb-20 bg-offWhite text-isaGreen">
   <div class="container mx-auto px-6">
     <h2 class="text-3xl font-sans font-normal mb-12 text-center">Especialidades</h2>
 
