--- a/src/components/widgets/Sobre.astro
+++ b/src/components/widgets/Sobre.astro
@@ -3,7 +3,7 @@ import DoctorPhoto from '../../assets/images/isadora-about.png';
 const { id } = Astro.props;
 ---
 
-<section {...id ? { id } : {}} class="scroll-mt-16 w-full py-20 bg-offWhite text-isaGreen">
+<section {...id ? { id } : {}} class="scroll-mt-16 w-full pt-10 pb-20 bg-offWhite text-isaGreen">
   <div class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-20 items-center">
     <!-- IMAGE + DECORATIVE CIRCLE -->
     <div class="relative order-2 md:order-none flex justify-center w-full md:w-auto">
@@ -26,7 +26,7 @@ const { id } = Astro.props;
 
     <!-- TEXT -->
     <div class="order-1 md:order-none text-isaPink">
-      <h2 class="text-3xl font-sans font-normal mb-6">Sobre Mim</h2>
+      <h2 class="text-3xl font-sans font-normal mb-6 text-center md:text-left">Sobre Mim</h2>
 
       <p class="font-urbanist text-lg leading-relaxed mb-4">
         Antes de ser médica, eu escolhi estar ao lado das mulheres nos seus momentos mais delicados, intensos e
