--- a/src/components/widgets/PorQueMeEscolher.astro
+++ b/src/components/widgets/PorQueMeEscolher.astro
@@ -9,7 +9,9 @@ const { id } = Astro.props;
 
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10">
       <!-- ITEM -->
-      <div class="flex flex-col items-center px-4">
+      <div
+        class="flex flex-col items-center px-4 intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
+      >
         <BookText class="w-10 h-10 mb-4 text-isaPink" />
         <h3 class="text-xl font-semibold mb-2">Atendimento Especializado</h3>
         <p class="font-medium text-base leading-relaxed opacity-90">
@@ -18,7 +20,9 @@ const { id } = Astro.props;
       </div>
 
       <!-- ITEM -->
-      <div class="flex flex-col items-center px-4">
+      <div
+        class="flex flex-col items-center px-4 intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
+      >
         <Heart class="w-10 h-10 mb-4 text-isaPink" />
         <h3 class="text-xl font-semibold mb-2">Empatia e Acolhimento</h3>
         <p class="font-medium text-base leading-relaxed opacity-90">
@@ -27,7 +31,9 @@ const { id } = Astro.props;
       </div>
 
       <!-- ITEM -->
-      <div class="flex flex-col items-center px-4">
+      <div
+        class="flex flex-col items-center px-4 intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
+      >
         <Sparkles class="w-10 h-10 mb-4 text-isaPink" />
         <h3 class="text-xl font-semibold mb-2">Baseado em Evidências</h3>
         <p class="font-medium text-base leading-relaxed opacity-90">
@@ -36,7 +42,9 @@ const { id } = Astro.props;
       </div>
 
       <!-- ITEM -->
-      <div class="flex flex-col items-center px-4">
+      <div
+        class="flex flex-col items-center px-4 intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
+      >
         <Clock class="w-10 h-10 mb-4 text-isaPink" />
         <h3 class="text-xl font-semibold mb-2">Pontualidade</h3>
         <p class="font-medium text-base leading-relaxed opacity-90">
