--- a/src/components/Favicons.astro
+++ b/src/components/Favicons.astro
@@ -8,7 +8,7 @@ import appleTouchIcon from '~/assets/favicons/apple-touch-icon.png';
 <link rel="icon" type="image/svg+xml" href={favIconSvg.src} />
 <link rel="mask-icon" href={favIconSvg.src} color="#8D46E7" />
 <link rel="apple-touch-icon" sizes="180x180" href={appleTouchIcon.src} /> -->
-<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="icon" href="/favicon.ico" />
 <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
