--- a/src/components/Favicons.astro
+++ b/src/components/Favicons.astro
@@ -7,7 +7,9 @@ import appleTouchIcon from '~/assets/favicons/apple-touch-icon.png';
 <link rel="shortcut icon" href={favIcon} />
 <link rel="icon" type="image/svg+xml" href={favIconSvg.src} />
 <link rel="mask-icon" href={favIconSvg.src} color="#8D46E7" />
-<link rel="apple-touch-icon" sizes="180x180" href={appleTouchIcon.src} /> -->
+<link rel="apple-touch-icon" sizes="180x180" href={appleTouchIcon.src} />
+
+-->
 <link rel="icon" href="/favicon.ico" />
 <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
